--- a/Index.html
+++ b/Index.html
@@ -76,8 +76,8 @@
     </p>
     <ul class="menu-list">
     <li><a id="createSquare">Sqaure</a></li>
-    <li><a>Rectangle</a></li>
-    <li><a>Circle</a></li>
+    <li><a id="createRectangle">Rectangle</a></li>
+    <li><a id="createCircle">Circle</a></li>
   </ul>
     </ul>
   </aside>
