--- a/Index.html
+++ b/Index.html
@@ -90,6 +90,7 @@
 
 
     <script src="fabric.min.js"></script>
+    <script src="customiseControls.min.js"></script>
     <script src="Main.js"></script>
 </body>
 </html>
